# unigestao2.0

./: .dockerignore  .env-example  .env_example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  clear_migrations.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task-template.md
bond/: admin.py  apps.py  models.py
bond/migrations/: 0001_initial.py  0002_admissioninfo_dismissal_date.py  0003_alter_admissioninfo_employee.py
cbos/: admin.py  apps.py  models.py
cbos/fixtures/: cbos_0.json  occupation_1.json  synonym_2.json
cbos/migrations/: 0001_initial.py  0002_alter_cbo_occupation_alter_occupation_name_and_more.py
configurations/: admin.py  apps.py  models.py
configurations/fixtures/: accounttype_fixture.json  admissiontype_fixture.json  bank_fixture.json  deficiency.json  degreeinstruction.json  gender.json  harmfulexposure_fixture.json  maritalstatus.json  nationality.json  paymenttype_fixture.json  pixtype_fixture.json  race.json
configurations/migrations/: 0001_initial.py
core/: .env-exemplo  jazzmin_config.py  settings.py  urls.py
employees/: admin.py  forms.py  models.py  urls.py  views.py
employees/fixtures/: deficiency.json  degreeinstruction.json  gender.json  initial_data.json  maritalstatus.json  nationality.json  (+1 more)
file_manager/: admin.py  apps.py  models.py  tests.py
geography/: admin.py  apps.py  models.py
nginx/: default.conf
payroll/: admin.py  apps.py  models.py  signals.py
scripts/: entrypoint.sh
(+40 files in other folders)
